data/all_generated_tests/raw_wast_tests/unreachable_InfiniteLoops_1174.wast
;; 5. **Test Description:**    - Implement a `loop` where `unreachable` is placed after a series of valid arithmetic operations but before a `br_if` that should exit the loop. The arithmetic operations must not run infinitely.    - Constraint: Validates that the `unreachable` instruction within complex instruction sequences properly causes an immediate trap.    - Infinite Loop Relation: Prevents the loop from running indefinitely by confirming `unreachable` traps.

(assert_invalid
  (module (func $test_unreachable_after_arithmetic_in_loop
    (loop (f64.add (f64.const 1.0) (f64.const 2.0)) (unreachable) (br_if 0 (i32.const 1)))
  ))
  "type mismatch"
)